--- a/fly.toml
+++ b/fly.toml
@@ -1,19 +1,22 @@
 app = "laborsubmittal"
 [build]
-   builder ="paketobuildpacks/builder:base"
+   image ="python:3.9-slim"
 [env]
    PORT ="8080"
 [[services]]
   internal_port =8080
   protocol = "tcp"
-  [services.concurrency]
-      hard_limit =25
-      soft_limit =20
-      type = "connections"
-   [[services.ports]]
-      handlers =["http"]
-      port= 80
-
   [[services.ports]]
-     handlers = ["tls", "http"]
-     port = 443
+      port = 80
+      handlers =["http"]
+      
+  [[services.ports]]
+      port= 443
+      handlers =["tls","http"]
+
+  [[services.tcp_checks]]
+     grace_period = "1s"
+     interval ="10s"
+     timeout= "2s"
+     retries = 3
+
