--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,30 @@
 app = "laborsubmittal"
+
 [build]
-   image ="python:3.9-slim"
+  dockerfile = "./Dockerfile"
+
 [env]
-   PORT ="8080"
+  PORT = "8080"
+
 [[services]]
-  internal_port =8080
+  internal_port = 8080
   protocol = "tcp"
+
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
+
   [[services.ports]]
-      port = 80
-      handlers =["http"]
-      
+    handlers = ["http"]
+    port = 80
+
   [[services.ports]]
-      port= 443
-      handlers =["tls","http"]
+    handlers = ["tls", "http"]
+    port = 443
 
   [[services.tcp_checks]]
-     grace_period = "1s"
-     interval ="10s"
-     timeout= "2s"
-     retries = 3
-
+    interval = "15s"
+    timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 0
